style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;

    font-family: var(--main-font);
}

:root {
    --main-font: "Poppins", sans-serif;
    
    --color1: #1B3C53;
    --color2: #234C6A;
    --color3: #456882;
    --color4: #BFC6C4;
    --color5: #E3E3E3;
    --color6: #fff;
    --color7: #000;
    --color8: #666666;
}

.container {
    display: grid;
    grid-template-columns: 300px 1fr;
    grid-template-rows: 50px 1fr;
    height: 100vh;
}

.sidebar {
    display: flex;
    flex-direction: column;
    grid-column: 1 / 2;
    grid-row: 1 / 3;
    background-color: var(--color1);
    height: 100%;
}

.icon-content {
    display: flex;
    align-items: center;
    padding: 20px 0 40px 15px;
}

.icon-content img {
    height: 80px;
}

.icon-content p {
    color: var(--color6);
    font-size: 1.5em;
    font-weight: bold;
}

.menu-content {
    display: flex;
    flex-direction: column;
    align-items: start;
    gap: 30px;
    padding-left: 40px;
}

.sidebar-content {
    display: flex;
    align-items: center;
    gap: 10px;
}

.sidebar-content p {
    color: var(--color6);
}

.sidebar-content img {
    height: 30px;
}

.header {
    display: flex;
    justify-content: space-between;
    grid-column: 2 / 3;
    grid-row: 1 / 2;
    padding: 0 20px 0 130px;
    align-items: center;
    border-bottom: 1px solid var(--color5);
    height: 50px;
}

.header img {
    height: 25px;
    opacity: 60%;
}

.header-menus {
    display: flex;
    gap: 60px;
}

.header-menu {
    display: flex;
    gap: 5px;
}

.header-menu img {
    color: var(--color7);
}

.right-content-header {
    display: flex;
    align-items: center;
    gap: 30px;
}

.profile-icon {
    width: 40px;
    height: 40px;
    background-color: #000;
    border-radius: 50%;
    margin: 0 0 0 -20px;
}

.name {
    opacity: 60%;
    padding: 0 0 0 30px;
}

.content {
    grid-column: 2 / 3;
    grid-row: 2 / 3;
    padding: 20px 50px 0 50px;
    overflow: auto;
}

.greeting-container {
    display: flex;
    align-items: center;
    justify-content: space-around;
    border-bottom: 1px solid var(--color4);
    height: 100px;
}

.greeting-btns {
    display: flex;
    gap: 30px;
}

.header-btn {
    background-color: var(--color3);
    width: 100px;
    padding: 10px;
    border-radius: 5px;
    color: var(--color6);
    border-style: none;
}

.greeting-icon-text {
    display: flex;
    gap: 20px;
}

.greeting-text {
    font-size: 1.5em;
    font-weight: 500;
}

.lower {
    font-size: 0.6em;
}

.higher {
    font-size: 0.8em;
}

.bigger {
    height: 80px;
    width: 80px;
}

.filter-section {
    display: flex;
    justify-content: space-between;
    align-items: center;
    height: auto;
}

.search-section h1 {
    font-size: 1.5em;
    font-weight: 500;
}

.search-section p {
    opacity: 50%;
    font-weight: 400;
}

.search-box {
    display: flex;
    width: 200px;
    padding: 5px;
    justify-content: end;
    border: 2px solid var(--color4);
    border-radius: 5px;
}

.search-and-icon {
    display: flex;
    gap: 30px;
}

.group-section {
    display: flex;
    gap: 20px;
    align-items: center;
}

.wider, .thiner {
    display: flex;
    font-weight: 500;
    background-color: #bfc6c464;
    padding: 10px;
    border-radius: 5px;
    align-items: center;
    justify-content: center;
    color: var(--color8);
    gap: 8px;
}

.thiner {
    width: 40px;
}

.group-section > p {
    font-size: 0.9em;
    opacity: 50%;
}

.filter-section {
    gap: 10px;
}

